Fixed the overlapping card headings on mobile.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,13 +79,9 @@ footer.page-footer {
 .card-title
 {
   font-size: 48px !important;
+  line-height: 48px !important;
+  line-height: 32px;
   color: #FFFFFF
-}
-
-.contact-card-title
-{
-  font-size: 48px !important;
-  color: #000000 !important;
 }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating)
